--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altair==5.5.0
 attrs==25.4.0
 bcrypt==5.0.0
+beautifulsoup4==4.14.3
 blinker==1.9.0
 cachetools==6.2.1
 captcha==0.7.1
@@ -15,7 +16,9 @@ cryptography==46.0.3
 cycler==0.12.1
 et_xmlfile==2.0.0
 extra-streamlit-components==0.1.81
+filelock==3.20.0
 fonttools==4.60.1
+gdown==5.2.0
 gitdb==4.0.12
 GitPython==3.1.45
 idna==3.11
@@ -39,6 +42,7 @@ pycparser==2.23
 pydeck==0.9.1
 PyJWT==2.10.1
 pyparsing==3.2.5
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.3
@@ -51,6 +55,7 @@ seaborn==0.13.2
 setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
+soupsieve==2.8
 streamlit==1.50.0
 streamlit-authenticator==0.4.2
 streamlit-option-menu==0.4.0
@@ -58,6 +63,7 @@ tenacity==9.1.2
 threadpoolctl==3.6.0
 toml==0.10.2
 tornado==6.5.2
+tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
